Adding V13 and improving few tests